2022-03-03

Mapproxy is now at 1.14

There is now a changes file. :-)

There is no longer a "build" section in the compose file,
I expect to pull the automatically built image from Docker Hub
from now on.
