@@ -1,0 +1,161 @@
+base: ../globals.yaml
+
+services:
+  demo:
+  wms:
+    md:
+    # You will see this title in ArcGIS Online AND in ArcGIS Pro.
+      title: County-wide aerial photos
+      abstract: Proxy of Oregon State imagery services
+
+layers:
+  - name: county_aerials
+    # You will see this title and grouping ONLY in ArcGIS Pro.
+    title: County aerial photos
+    md:
+      attribution:
+        title: Oregon Explorer Natural Resources Digital Library
+        url: https://oregonexplorer.info/
+
+    # You can put all the layers in one group like this, underneath "county_aerials"
+    # or you can put in a separate top level "layers" entry for each photo.
+    # The results are the same in ArcGIS Online but grouping them this way
+    # looks better in ArcGIS Pro, there are not as many levels of "folders" to deal with.
+    
+    layers:
+      - name: naip1995
+        title: NAIP 1995 1m BW DOQ
+        sources: [naip1995_cache]
+
+      - name: naip2000
+        title: NAIP 2000 1m BW DOQ
+        sources: [naip2000_cache]
+
+      - name: naip2005
+        title: NAIP 2005 1/2m 3-band Color
+        sources: [naip2005_cache]
+
+      - name: naip2009
+        title: NAIP 2009 1/2m 4-band
+        sources: [naip2009_cache]
+
+      - name: naip2014
+        title: NAIP 2014 1m 4-band
+        sources: [naip2014_cache]
+
+      - name: naip2016
+        title: NAIP 2016 1m 4-band
+        sources: [naip2016_cache]
+
+      - name: osip2018
+        title: OSIP 2018 1 foot
+        sources: [osip2018_cache]
+
+caches:
+  osip2018_cache:
+    grids: [county]
+    sources: [osip2018_source]
+    bulk_meta_tiles: true
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/osip2018
+            
+  naip2016_cache:
+    grids: [county]
+    sources: [naip2016_source]
+    bulk_meta_tiles: true
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/naip2016
+            
+  naip2014_cache:
+    grids: [county]
+    sources: [naip2014_source]
+    bulk_meta_tiles: true
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/naip2014
+            
+  naip2009_cache:
+    grids: [county]
+    sources: [naip2009_source]
+    bulk_meta_tiles: true
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/naip2009
+            
+  naip2005_cache:
+    grids: [county]
+    sources: [naip2005_source]
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/naip2005
+            
+  naip2000_cache:
+    grids: [county]
+    sources: [naip2000_source]
+    bulk_meta_tiles: true
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/naip2000
+            
+  naip1995_cache:
+    grids: [county]
+    sources: [naip1995_source]
+    bulk_meta_tiles: true
+    format: image/jpeg
+    request_format: image/jpeg
+    cache:
+      type: sqlite
+      directory: /srv/mapproxy/cache/naip1995
+            
+sources:
+  osip2018_source:
+    type: arcgis
+    req:
+      url: http://imagery.oregonexplorer.info/arcgis/rest/services/OSIP_2018/OSIP_2018_WM/ImageServer
+
+  naip2016_source:
+    type: arcgis
+    req:
+      url: http://imagery.oregonexplorer.info/arcgis/rest/services/NAIP_2016/NAIP_2016_WM/ImageServer
+
+  naip2014_source:
+    type: arcgis
+    req:
+      url: http://imagery.oregonexplorer.info/arcgis/rest/services/NAIP_2014/NAIP_2014_WM/ImageServer
+
+  naip2009_source:
+    type: wms
+    req:
+      url: https://imagery.oregonexplorer.info/arcgis/services/NAIP_2009/NAIP_2009_WM/ImageServer/WMSServer?service=WMS
+      layers: 
+      transparent: true
+
+  naip2005_source:
+    type: arcgis
+    req:
+      url: http://imagery.oregonexplorer.info/arcgis/rest/services/NAIP_2005/NAIP_2005_WM/ImageServer
+
+  naip2000_source:
+    type: arcgis
+    req:
+      url: http://imagery.oregonexplorer.info/arcgis/rest/services/NAIP_2000/NAIP_2000_WM/ImageServer
+
+  naip1995_source:
+    type: arcgis
+    req:
+      url: http://imagery.oregonexplorer.info/arcgis/rest/services/NAIP_1995/NAIP_1995_WM/ImageServer
+
